# python_labs

./: .coverage  README.md  pyproject.toml
data/: text.txt
data/lab08/: students_input.json  students_output.json
data/lab09/: students.csv
src/lab01/: 02_sum_avg.py  03_discount_vat.py  04_minutes_to_hhmm.py  05_initials_and_len.py
src/lab02/: arrays.py  matrix.py  tuples.py
src/lab03/: text.py  text_stats.py
src/lab04/: io_txt_csv.py  text_report.py
src/lab05/: csv_xlsx.py  json_csv.py
src/lab06/: cli_convert.py  cli_text.py
src/lab07/: README.md
src/lab08/: README.md  models.py  serialize.py
src/lab09/: group.py
src/lab10/: README.md  linked_list.py  structures.py
src/lib/: io_helpers.py  text.py
tests/: test_json_csv.py  test_text.py
